--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "~51.0.28",
+    "expo": "^45.0.8",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
     "mqtt": "^5.10.1",
