--- a/app.json
+++ b/app.json
@@ -22,6 +22,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "compilerOptions": {
+        "paths": {
+          "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+        },
+      "extends": "expo/tsconfig.base"
+    }  
   }
 }
